<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/verify_code_back"
    android:background="#F8F1EA"
    tools:context=".View.VerifyCodeActivity">

    <TextView
        android:id="@+id/text_verify_code"
        android:textColor="#2F4F4F"
        android:textSize="32sp"
        android:letterSpacing="0.05"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rebordeado_verify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verify_code_title"/>

    <LinearLayout
        android:id="@+id/rebordeado_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:elevation="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/code_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/code_hint"
            android:maxLength="8"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/poppins"
            android:textColorHint="#8D6E63"
            android:textColor="#2F4F4F"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:elevation="2dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button"
            android:text="@string/verify_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:elevation="4dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
