<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".View.ChatFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Encabezado del chat -->
        <TextView
            android:id="@+id/chatHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chatHeaderText"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>

        <!-- Contenedor de mensajes -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/light_gray">

            <LinearLayout
                android:id="@+id/messagesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"/>
        </ScrollView>

        <!-- Línea divisoria -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" /> <!-- Color de la línea -->

        <!-- Contenedor del GIF -->
        <LinearLayout
            android:id="@+id/GIFContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <!-- ImageView para el GIF -->
            <ImageView
                android:id="@+id/avatar_gif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Avatar animado"
                android:scaleType="centerInside"/>
        </LinearLayout>

        <!-- Entrada de texto y botón de enviar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/inputMessage"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/chatEditText"
                android:padding="8dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/micButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_black_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/chatAudioBtn"
                android:layout_marginStart="8dp"
                android:scaleType="centerInside"
                android:padding="2dp"/>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chatSendButton"
                android:padding="12dp"
                android:color="@color/white"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>